[package]
name = "bottle-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = "0.30.1"
clap = { version = "4.5.21", features = ["derive"] }
solana-sdk = "1.18.26"
solana-account-decoder = "1.18.26"
bottle = {path = "../programs/bottle", features = ["cpi"]}
sha2 = "0.10.8"
home = "0.5.9"
